--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -8,6 +8,7 @@
     <title>文章详情</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <link rel="shortcut icon" href="/static/img/kuding.ico">
     <link rel="stylesheet" type="text/css" href="/static/plug/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/nprogress.css">
     <link rel="stylesheet" type="text/css" href="/static/css/s_style.css">
