--- a/templates/tool.html
+++ b/templates/tool.html
@@ -15,16 +15,13 @@
     <div style="text-align: center">
         <div class="tool_div">
             <div>
-                c
-            </div>
-            <div>
                 java
             </div>
             <div>
                 python
             </div>
              <div>
-                Scratch
+                 <a href="http://45.63.119.250:5000/project_create">Scratch</a>
             </div>
         </div>
     </div>
