--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>
         {% block title %} {% endblock %}
     </title>
+    <link rel="shortcut icon" href="/static/img/kuding.ico">
     <link rel="stylesheet" href="/static/plug/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/plug/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/s_mycss.css">
@@ -228,11 +229,11 @@
 
 
 <div class="footer">
-    <a target="_blank" href="index.html">首页</a>
-    <a target="_blank" href="stu_show.html">学员风采</a>
-    <a target="_blank" href="class_type.html">课程类型</a>
-    <a target="_blank" href="Teachers_lineup.html">师资阵容</a>
-    <a target="_blank" href="contact.html">联系我们</a>
+    <a target="_blank" href="/index/">首页</a>
+    <a target="_blank" href="/stu_show/">学员风采</a>
+    <a target="_blank" href="/class_type/">课程类型</a>
+    <a target="_blank" href="/Teachers_lineup/">师资阵容</a>
+    <a target="_blank" href="/contact/">联系我们</a>
     <p style="font-size: 12px;">©淮北麒麟信息科技有限公司    All Rights Reserved | <a href="http://www.qilinxx.com/">备案号</a></p>
 </div>
 
