--- a/templates/m_teacher.html
+++ b/templates/m_teacher.html
@@ -42,6 +42,10 @@
                 <i class="fa fa-paint-brush" aria-hidden="true"></i> &nbsp;
                 <a href="#">发布测试</a>
             </div>
+            <div class="m_menu">
+                <i class="fa fa-paint-brush" aria-hidden="true"></i> &nbsp;
+                <a href="#">评价</a>
+            </div>
 
 
         </div>
@@ -218,7 +222,6 @@
                 </div>
 
             </div>
-
             <div class="m m_4 m_hide">
                 <table class="m_1_table table table-hover">
                     <thead>
@@ -251,6 +254,65 @@
             <di class="m_7 m m_hide">
                 <a style="margin-top: 20px;margin-left: 20px" type="button" class="btn btn-info">进入房间</a>
             </di>
+            <div class="m_8 m m_hide">
+                <div class="form_box">
+                    <form action="/student/" method="POST" id="fm">
+                        {% csrf_token %}
+                        <div class="form-group m_hide">
+                            <label for="inpute_tid_id" class="col-sm-2 control-label ttes">老师姓名:</label>
+                            <div class="col-sm-10">
+                                <input type="text" name="e_tid_id" class="form-control tte" placeholder="老师姓名"
+                                       value="{{ tid }}">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inpute_ttos_evaluate" class="col-sm-2 control-label ttes">老师对学生的评价:</label>
+                            <div class="col-sm-10">
+                                <input type="text" name="e_ttos_evaluate" class="form-control tte" id="e_ttos_evaluate"
+                                       placeholder="老师对学生的评价">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inpute_ttos_score" class="col-sm-2 control-label ttes">老师对学生的打分:</label>
+                            <div class="col-sm-10">
+                                <input type="text" name="e_ttos_score" class="form-control tte" id="e_ttos_score"
+                                       placeholder="老师对学生的打分">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inpute_sid" class="col-sm-2 control-label ttes">学生姓名:</label>
+                            <div class="col-sm-10">
+                                <select name="e_sid_id" class="form-control tte" id="steudent">
+                                    {% for infor in informations %}
+                                        <option value="{{ infor.s_id }}">{{ infor.s_name }}</option>
+                                    {% endfor %}
+                                </select>
+                                {#                                <input type="text" class="form-control te" id="e_tid" placeholder="老师姓名">#}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inpute_ttos_score" class="col-sm-2 control-label ttes">课程名:</label>
+                            <div class="col-sm-10">
+                                <select name="e_did_id" class="form-control tte" id="detail">
+                                    {% for infor in informations %}
+                                        <option value="{{ infor.d_id }}">{{ infor.d_name }}</option>
+                                    {% endfor %}
+                                </select>
+                                {#                                <input type="text" class="form-control te" id="e_ttos_score" placeholder="课程名">#}
+                            </div>
+                        </div>
+
+                        <p id="stu_error"></p>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <p class="tbtns btn btn-default">评价</p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -261,9 +323,43 @@
     <script>
         $(function () {
             bindEvent();
+            bindEvaluate();
             bindEdit();
             bindEditConfirm();
+            bindEval();
         });
+
+
+        function bindEvaluate() {
+            $('.tbtns').click(function () {
+                var postData = {};
+                $('#fm').find('input, select').each(function () {
+                    var v = $(this).val();
+                    var n = $(this).attr('name');
+                    console.log(v);
+                    console.log(n);
+                    postData[n] = v;
+
+                });
+                console.log(postData);
+                $.ajax({
+                    url: '/teacher/',
+                    type: 'POST',
+                    dataType: 'JSON',
+                    data: postData,
+                    success: function (arg) {
+                        if (arg.status) {
+                            alert(arg.inf);
+                        }
+                        else {
+                            alert(arg.inf);
+                        }
+
+                    }
+                });
+
+            });
+        }
 
         $('.m_menu').click(function () {
             $(this).addClass('actions');
